--- a/views/files.html
+++ b/views/files.html
@@ -4,6 +4,7 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <script src="https://cdn.tailwindcss.com"></script>
             <title>Local Server</title>
             <style>
@@ -54,6 +55,10 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                <div class="flex flex-col items-center gap-2">
+                    <i class="fa fa-solid fa-file-lines hover:fa-beat fa-2xl" style="color: #bdbfc1;"></i>
+                    <h5 style="font-family: 'Comic Sans MS';" class="text-white pt-2 text-center">coba</h5>
                 </div>
                 <div class="p-1 h-96 w-96">
                     <img src="https://i.ibb.co/gt4PXS7/member.jpg" alt="Member Kessoku">
