--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="pt-10 px-10">
             <form action="" method="POST" enctype="multipart/form-data">
-                <input type="text" id="searchFile" name="searchFile" style="background-color: #1a1a1a;" class="border-b-4" size="50">
+                <input type="text" id="searchFile" name="searchFile" style="background-color: #1a1a1a;" class="border-b-4" size="50" required>
                 <button type="Submit" class="ml-2 h-8 text-justify rounded-md p-1 bg-neutral-100 text-black">Search</button>
             </form>
         </div>
