--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,15 @@
       </div>
       <div class="mt-[60px] px-[24px] py-[12px] w-full rounded-xl" style="background-color: #984ed8">
         <form action="" method="POST" enctype="multipart/form-data" class="flex justify-center items-center grow">
-          <input type="text" id="searchFile" name="searchFile" style="background-color: transparent" class="border-b-0 text-black rounded-full flex grow placeholder-white" placeholder="Cari file disini" required />
+          <input
+            type="text"
+            id="searchFile"
+            name="searchFile"
+            style="background-color: transparent"
+            class="border-b-0 text-black rounded-full flex grow placeholder-white placeholder-opacity-50 text-white"
+            placeholder="Cari file disini"
+            required
+          />
           <button type="Submit" class="p-2.5 rounded-full">
             <i class="fa fa-solid fa-magnifying-glass fa-lg" style="color: #fff"></i>
           </button>
