--- a/views/components/html/footerItem.html
+++ b/views/components/html/footerItem.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row py-[8px] items-center pl-[10px] pr-[16px] ml-[24px] rounded-full" style="background-color: #984ed8">
+<a href="https://github.com/%s" target="blank" class="flex flex-row py-[8px] items-center pl-[10px] pr-[16px] ml-[24px] rounded-full" style="background-color: #984ed8">
   <img src="%s" alt="%s" width="28" height="28" class="rounded-full mr-[10px]" />
   <span class="flex item-center content-center">%s</span>
-</div>
+</a>
