--- a/views/index.html
+++ b/views/index.html
@@ -35,23 +35,9 @@
         outline: none;
       }
     </style>
-    <title>Local Server</title>
+    <title>Kessoku Database</title>
   </head>
   <body style="background-color: #7e22ce" class="flex flex-col min-h-screen items-center">
-    <div class="max-w-3xl w-full items-center">
-      <div class="flex flex-col w-full">
-        <div class="flex flex-col items-start self-center w-[600px] pt-[160px]">
-          <span class="text-[172px] self-start leading-[0.75] uppercase text-white" style="font-family: 'Thunder', sans-serif; font-weight: 900" class="text-[178px] text-white py-10">
-            Kessoku <br />
-            Database
-          </span>
-          <div class="flex flex-row py-[12px] px-[16px] items-center rounded-xl shrink self-start" style="background-color: #984ed8">
-            <i class="fa fa-solid fa-home fa-md mr-[16px]" style="color: #fff"></i>
-            <span class="flex item-center content-center text-white">Back to home</span>
-          </div>
-        </div>
-      </div>
-      %s
-    </div>
+    <div class="max-w-3xl w-full items-center">%s</div>
   </body>
 </html>
