--- a/views/components/html/fileTableItem.html
+++ b/views/components/html/fileTableItem.html
@@ -1,7 +1,7 @@
-<div class="flex flex-row p-[12px] text-white mt-[16px] rounded-xl" style="background-color: #984ed8">
+<a href="/database/%s" class="flex flex-row p-[12px] text-white mt-[16px] rounded-xl" style="background-color: #984ed8">
   <div class="basis-4/5 flex flex-row">
     <i class="fa fa-solid fa-%s fa-lg pt-[12px] pr-[16px]" style="color: #fff"></i>
     <div class="gorw">%s</div>
   </div>
   <div class="basis-1/5">%s bytes</div>
-</div>
+</a>
