implement cdn for font

--- a/views/components/html/title.html
+++ b/views/components/html/title.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col w-full">
-  <div class="flex flex-col items-start self-center w-[600px] pt-[160px]">
-    <span class="text-[172px] self-start leading-[0.75] uppercase text-white" style="font-family: 'Thunder', sans-serif; font-weight: 900" class="text-[178px] text-white py-10"> %s </span>
-    <a href="/" class="mt-[32px] flex flex-row py-[12px] px-[16px] items-center rounded-xl shrink self-start" style="background-color: #984ed8">
+  <div class="flex flex-col items-start self-center w-[600px] pt-[120px]">
+    <span class="text-[178px] self-start leading-[0.75] uppercase text-white py-10" style="font-family: 'Thunder', sans-serif; font-weight: 900"> %s </span>
+    <a href="/" class="flex flex-row py-[12px] px-[16px] items-center rounded-xl shrink self-start" style="background-color: #984ed8">
       <i class="fa fa-solid fa-home fa-md mr-[16px]" style="color: #fff"></i>
       <span class="flex item-center content-center text-white">Back to home</span>
     </a>
