--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
     <style>
       @font-face {
         font-family: 'Thunder';
-        src: url('/assets/Thunder-BlackLC.ttf');
+        src: url('https://drive.google.com/uc?export=download&id=1bi-uDogf87MebxFBKBXwWdnSmTs_FMFC');
       }
 
       * {
