open new tab while click file

--- a/views/components/html/fileTableItem.html
+++ b/views/components/html/fileTableItem.html
@@ -1,4 +1,4 @@
-<a href="/database/%s" class="flex flex-row p-[12px] text-white mt-[16px] rounded-xl" style="background-color: #984ed8">
+<a href="/database/%s" class="flex flex-row p-[12px] text-white mt-[16px] rounded-xl" target="blank" style="background-color: #984ed8">
   <div class="basis-4/5 flex flex-row">
     <i class="fa fa-solid fa-%s fa-lg pt-[12px] pr-[16px]" style="color: #fff"></i>
     <div class="gorw">%s</div>
