--- a/views/components/html/fileTableItem.html
+++ b/views/components/html/fileTableItem.html
@@ -3,5 +3,5 @@
     <i class="fa fa-solid fa-%s fa-lg pt-[12px] pr-[16px]" style="color: #fff"></i>
     <div class="gorw">%s</div>
   </div>
-  <div class="basis-1/5">%s bytes</div>
+  <div class="basis-1/5">%s</div>
 </a>
